CREATE TABLE IF NOT EXISTS profiles (
  id TEXT PRIMARY KEY NOT NULL,
  full_name TEXT NOT NULL,
  email TEXT,
  phone TEXT,
  linkedin_url TEXT,
  github_url TEXT,
  portfolio_url TEXT,
  headline TEXT,
  summary TEXT,
  location_text TEXT,
  desired_salary INTEGER,
  salary_currency TEXT NOT NULL DEFAULT 'USD',
  preferred_locations TEXT NOT NULL DEFAULT '[]',
  remote_preference TEXT NOT NULL DEFAULT 'flexible',
  skills TEXT NOT NULL DEFAULT '[]',
  work_eligibility TEXT NOT NULL DEFAULT '',
  notice_period_days INTEGER,
  interview_availability TEXT NOT NULL DEFAULT '',
  created_at TEXT NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TEXT NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX IF NOT EXISTS idx_profiles_created_at
ON profiles (created_at DESC);

CREATE INDEX IF NOT EXISTS idx_profiles_full_name
ON profiles (full_name);

CREATE INDEX IF NOT EXISTS idx_profiles_email
ON profiles (email);

CREATE INDEX IF NOT EXISTS idx_profiles_headline
ON profiles (headline);
