erDiagram
  COMPANIES {
    TEXT id PK
    TEXT name
  }

  CONTACTS {
    TEXT id PK
    TEXT company_id FK
    TEXT full_name
  }

  APPLICATIONS {
    TEXT id PK
    TEXT company_id FK
    TEXT title
  }

  TAGS {
    TEXT id PK
    TEXT name
  }

  DOCUMENTS {
    TEXT id PK
    TEXT title
    TEXT kind
  }

  EVENTS {
    TEXT id PK
    TEXT type
    TEXT title
  }

  NOTIFICATIONS {
    TEXT id PK
    TEXT application_id FK
    TEXT event_id FK
    TEXT severity
  }

  PROFILES {
    TEXT id PK
    TEXT full_name
  }

  SETTINGS {
    TEXT id PK
    TEXT profile_id FK
    TEXT theme
    TEXT locale
  }

  CONSTANTS {
    TEXT type PK
    TEXT value PK
    TEXT settings_label
    TEXT label
  }

  APPLICATION_TAGS {
    TEXT application_id PK,FK
    TEXT tag_id PK,FK
  }

  APPLICATION_DOCUMENTS {
    TEXT application_id PK,FK
    TEXT document_id PK,FK
    TEXT relation_type
  }

  APPLICATION_CONTACTS {
    TEXT application_id PK,FK
    TEXT contact_id PK,FK
    TEXT relation_type
  }

  COMPANY_TAGS {
    TEXT company_id PK,FK
    TEXT tag_id PK,FK
  }

  CONTACT_TAGS {
    TEXT contact_id PK,FK
    TEXT tag_id PK,FK
  }

  APPLICATION_EVENTS {
    TEXT application_id PK,FK
    TEXT event_id PK,FK
    TEXT event_at
    INTEGER sort_order
  }

  COMPANIES ||--o{ CONTACTS : company_id
  COMPANIES ||--o{ APPLICATIONS : company_id

  APPLICATIONS ||--o{ NOTIFICATIONS : application_id
  EVENTS ||--o{ NOTIFICATIONS : event_id

  PROFILES ||--o{ SETTINGS : profile_id

  APPLICATIONS ||--o{ APPLICATION_TAGS : application_id
  TAGS ||--o{ APPLICATION_TAGS : tag_id

  APPLICATIONS ||--o{ APPLICATION_DOCUMENTS : application_id
  DOCUMENTS ||--o{ APPLICATION_DOCUMENTS : document_id

  APPLICATIONS ||--o{ APPLICATION_CONTACTS : application_id
  CONTACTS ||--o{ APPLICATION_CONTACTS : contact_id

  COMPANIES ||--o{ COMPANY_TAGS : company_id
  TAGS ||--o{ COMPANY_TAGS : tag_id

  CONTACTS ||--o{ CONTACT_TAGS : contact_id
  TAGS ||--o{ CONTACT_TAGS : tag_id

  APPLICATIONS ||--o{ APPLICATION_EVENTS : application_id
  EVENTS ||--o{ APPLICATION_EVENTS : event_id
